Zadania/zadania podczas zajęć/zajecia01/04_09_2018 repl.txt
  File "<stdin>", line 1, in <module>
NameError: name 'oxfff' is not defined
>>> type(0xfff)
<class 'int'>
>>>
>>>
>>> 4.3
4.3
>>> 4,3
(4, 3)
>>>
>>>
>>> type(232.2)
<class 'float'>
>>>
>>> 123e3
123000.0
>>>
>>> type(2e-4)
<class 'float'>
>>>
>>> type(none)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'none' is not defined
>>> type(None)
<class 'NoneType'>
>>>
>>>
>>> True
True
>>> true
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'true' is not defined
>>> False
False
>>> type(True)
<class 'bool'>
>>> True+3
4
>>> False+2
2
>>> false+2
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'false' is not defined
>>>
>>>
>>> False+10
10
>>> True+10
11
>>> 'to jest tekst'
'to jest tekst'
>>> 'to jest inny tekst"
  File "<stdin>", line 1
    'to jest inny tekst"
                       ^
SyntaxError: EOL while scanning string literal
>>> "to jest inny tekst"
'to jest inny tekst'
>>> '''to jest
...
... tekst'''
'to jest\n\ntekst'
>>>
>>> print('tekst')
tekst
>>> print("to jest\n\n\n tekst')
  File "<stdin>", line 1
    print("to jest\n\n\n tekst')
                               ^
SyntaxError: EOL while scanning string literal
>>> print('to jest\n\n\n tekst')
to jest


 tekst
>>> print(321)
321
>>>
>>> 'to jest'+'tekst'
'to jesttekst'
>>> 'to jest'+' tekst'
'to jest tekst'
>>> 'to jest'+" tekst"
'to jest tekst'
>>>
>>> 'tekst'*3
'tekstteksttekst'
>>> 'tekst'*'inny tekst'
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: can't multiply sequence by non-int of type 'str'
>>> 'x'*10
'xxxxxxxxxx'
>>>
>>>
>>> b'tekst'
b'tekst'
>>>
>>> b'tekst ¿ó³ty'
  File "<stdin>", line 1
SyntaxError: bytes can only contain ASCII literal characters.
>>> type(b'kolejny tekst')
<class 'bytes'>
>>>
>>>
>>> liczba=42
>>> liczba
42
>>> liczba + liczba
84
>>> liczba * 3
126
>>> liczba2 = 237e-5
>>> liczba2
0.00237
>>> wynik = (4 + 12) / 7
>>> wynik
2.2857142857142856
>>> wynik = 'tekst wyniku'
>>> wynik
'tekst wyniku'
>>> wynik / 5
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: unsupported operand type(s) for /: 'str' and 'int'
>>> type(wynik)
<class 'str'>
>>> del wynik
>>> wynik
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'wynik' is not defined
>>> int = 13
>>> del int
>>> exit
Use exit() or Ctrl-Z plus Return to exit
>>> ^Z


C:\Users\USER>python
Python 3.7.0 (v3.7.0:1bf9cc5093, Jun 27 2018, 04:06:47) [MSC v.1914 32 bit (Intel)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> liczba = 14
>>> Liczba = 1003
>>> liczba
14
>>> liczbe
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'liczbe' is not defined
>>>
>>>
>>> liczba_kursantow = 16
>>> liczba kursanow = 16
  File "<stdin>", line 1
    liczba kursanow = 16
                  ^
SyntaxError: invalid syntax
>>> 2nascie = 12
  File "<stdin>", line 1
    2nascie = 12
          ^
SyntaxError: invalid syntax
>>> int(123)
123
>>> int
<class 'int'>
>>>
>>>
>>>
>>> cena_paliwa = 5.08
>>> dystans = 250
>>> spalanie_na100km = 6.7
>>> spalanie_na100km * dystans 100 * cena_paliwa
  File "<stdin>", line 1
    spalanie_na100km * dystans 100 * cena_paliwa
                                 ^
SyntaxError: invalid syntax
>>> spalanie_na100km * dystans / 100 * cena_paliwa
85.09
>>> koszt = spalanie_na100km * dystans / 100 * cena_paliwa
>>> koszt
85.09
>>> koszt = spalanie_na100km * dystans / 100 * cena_paliwa
>>> koszt
85.09
>>> exit ()

C:\Users\USER>cd desktop

C:\Users\USER\Desktop>dir
 Volume in drive C has no label.
 Volume Serial Number is 9A5A-CF87

 Directory of C:\Users\USER\Desktop

2018-09-04  19:51    <DIR>          .
2018-09-04  19:51    <DIR>          ..
2017-12-04  11:19            38 070 24231816_1608700355861324_8223837107041855045_n.jpg
2018-06-08  21:37    <DIR>          allegro
2018-05-23  20:44    <DIR>          broszki
2018-07-18  22:40           103 928 CV Bart³omiej JaniszewskANALITYK.pdf
2018-07-17  19:11               368 cv.txt
2018-05-24  14:53         2 124 629 IMAG9204.jpg
2018-07-12  12:09         2 824 058 IMG_20180712_120756.jpg
2018-07-27  22:50         3 727 692 IMG_20180725_135352.jpg
2018-07-27  22:51         4 841 058 IMG_20180725_144444.jpg
2018-07-27  22:49         3 902 679 IMG_20180725_144454.jpg
2018-06-08  10:12            21 632 KANCELARIA ADWOKACKA.docx
2018-06-08  21:29           181 606 Karta zg³oszenia na  OR I st._3-19.08.2018.rtf
2018-07-30  09:24            11 284 mbanko odp wezwanie.docx
2017-10-23  09:33    <DIR>          modlitwy
2017-02-20  17:39            29 256 NOWENNA DO MATKI BO¯EJ JASNOGÓRSKIEJ I.docx
2017-06-07  22:33         1 900 251 Obrot dziel sztuki - Bartosz  Krapinski - ebook (1).pdf
2018-07-30  21:44           113 439 pismo dot Bart³omiej Janiszewski.pdf
2018-08-02  08:40            58 153 PSZ-ZBG.pdf
2018-09-04  19:52    <DIR>          python
2017-09-26  22:27           188 579 Rachunek_sumienia_przygotowjacy_do_spowiedzi_generalnej.pdf
2018-05-09  13:13            32 206 stopka.png
2018-03-31  18:31    <DIR>          studia podatkowe
2017-02-13  23:33            26 145 sw-rita.jpg
2018-07-17  14:21    <DIR>          Targi sztuki
2018-09-01  08:33           297 736 tech.3camp.pdf
2017-03-13  22:40            19 915 tekst do t³umaczenia.docx
2017-10-17  19:40             3 126 wybrane foto.txt
2018-07-20  23:22            68 528 wypowiedzenie umowy.pdf
2018-02-04  13:01           161 709 ZASADY-DK.pdf
2018-02-24  22:29            21 979 Ze wzglêdu na nasz¹ wiedzê i 40.docx
              24 File(s)     20 698 026 bytes
               8 Dir(s)   9 308 569 600 bytes free

C:\Users\USER\Desktop>python
Python 3.7.0 (v3.7.0:1bf9cc5093, Jun 27 2018, 04:06:47) [MSC v.1914 32 bit (Intel)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> exit()

C:\Users\USER\Desktop>python skrypt.py

C:\Users\USER\Desktop>python skrypt.py
  File "skrypt.py", line 4
    spalanie_na100km * dystans 100 * cena_paliwa
                                 ^
SyntaxError: invalid syntax

C:\Users\USER\Desktop>python skrypt.py
  File "skrypt.py", line 4
    spalanie_na100km * dystans 100 * cena_paliwa
                                 ^
SyntaxError: invalid syntax

C:\Users\USER\Desktop>python skrypt.py
  File "skrypt.py", line 4
    spalanie_na100km * dystans 100 * cena_paliwa
                                 ^
SyntaxError: invalid syntax

C:\Users\USER\Desktop>python skrypt.py
  File "skrypt.py", line 4
    spalanie_na100km * dystans 100 * cena_paliwa
                                 ^
SyntaxError: invalid syntax

C:\Users\USER\Desktop>python skrypt.py
  File "skrypt.py", line 4
    spalanie_na100km * dystans 100 * cena_paliwa
                                 ^
SyntaxError: invalid syntax

C:\Users\USER\Desktop>skrypt.pl
'skrypt.pl' is not recognized as an internal or external command,
operable program or batch file.

C:\Users\USER\Desktop>skrypt.py
  File "C:\Users\USER\Desktop\skrypt.py", line 4
    spalanie_na100km * dystans 100 * cena_paliwa
                                 ^
SyntaxError: invalid syntax

C:\Users\USER\Desktop>^Z
C:\Users\USER\Desktop>python
Python 3.7.0 (v3.7.0:1bf9cc5093, Jun 27 2018, 04:06:47) [MSC v.1914 32 bit (Intel)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> ^Z


C:\Users\USER\Desktop>python skrypt.py
  File "skrypt.py", line 4
    spalanie_na100km * dystans 100 * cena_paliwa
                                 ^
SyntaxError: invalid syntax

C:\Users\USER\Desktop>python skrypt.py
Koszt wyprawy to:
85.09

C:\Users\USER\Desktop>